lxc-traefik/rancher-files/traefik-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-traefik-ingressroute
  namespace: cattle-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`rancher.ooguy.com`)
      kind: Rule
      services:
        - name: rancher
          port: 80
  tls:
    certResolver: dynu
